<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".MainActivity"
    tools:visibility="visible">

    <ImageView
        android:id="@+id/kindnessImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/kindness_image"
        app:layout_constraintBottom_toTopOf="@+id/passwordText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/kindness" />

    <ImageView
        android:id="@+id/rectangleImage"
        android:layout_width="410dp"
        android:layout_height="484dp"
        android:contentDescription="@string/curved_rectangle_image"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/rectangle"
        tools:visibility="visible" />

    <Button
        android:id="@+id/login_button"
        android:layout_width="260dp"
        android:layout_height="65dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/rectangle_button"
        android:onClick="toHomeScreen"
        android:text="@string/login_button"
        app:backgroundTint="#3D8AF7"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordText"
        app:layout_constraintVertical_bias="0.209" />

    <ImageView
        android:id="@+id/mrgsLogoImage"
        android:layout_width="125dp"
        android:layout_height="129dp"
        android:contentDescription="@string/mrgs_logo"
        app:layout_constraintBottom_toTopOf="@+id/emailAddressText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.809"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rectangleImage"
        app:layout_constraintVertical_bias="0.375"
        app:srcCompat="@drawable/mrgs_logo" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="255dp"
        android:layout_height="43dp"
        android:ems="10"
        android:hint="@string/password_and_email_hint"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.764" />

    <EditText
        android:id="@+id/emailAddressText"
        android:layout_width="258dp"
        android:layout_height="45dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/password_and_email_hint"
        android:inputType="textEmailAddress"
        android:singleLine="false"
        android:textColor="#000000"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/passwordText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.511"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.915"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/text_email"
        android:textAllCaps="false"
        android:textColor="#0C59CF"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/emailAddressText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.201"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rectangleImage"
        app:layout_constraintVertical_bias="1.0"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/text_password"
        android:textColor="#0C59CF"
        app:layout_constraintBottom_toTopOf="@+id/passwordText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.214"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddressText"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_signup"
        android:textColor="#35424A"
        android:textSize="26sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/mrgsLogoImage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/rectangleImage"
        app:layout_constraintVertical_bias="0.57" />

</androidx.constraintlayout.widget.ConstraintLayout>